# airlabs-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
airlabs/: Cargo.toml
airlabs-api/: Cargo.toml
airlabs-api/src/: airlines.rs  airports.rs  common.rs  flight.rs  flights.rs  lib.rs  ping.rs  request.rs
airlabs-api/src/airports/: impls.rs
airlabs-api/src/flight/: aa6.json  af6755.json  impls.rs  ly1.json  tests.rs  vs6.json
airlabs-api/src/flights/: flights_free.json  tests.rs
airlabs-api/src/request/: impls.rs
airlabs-client/: Cargo.toml
airlabs-client/src/: lib.rs  response.rs  tests.rs
airlabs-client/src/response/: airlines_free.json  airports_free.json  flight_free.json  flights_free.json  tests.rs
airlabs/src/: command.rs  main.rs  output.rs
airlabs/src/output/: airline.rs  airport.rs  flight.rs
examples/: airlines.rs
src/: api.rs  error.rs  lib.rs
src/api/: airlines.rs  airports.rs  error.rs  flight.rs  request.rs
src/api/flight/: docs.json  ek96.json  tests.rs
