[package]
name = "airlabs"
version = "0.1.0"
edition = "2021"


[dependencies]
derive_builder = "0.20.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"


[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
serde_json = "1.0"


[features]
pedantic = []
