[workspace]
resolver = "3"
members = ["airlabs", "airlabs-api", "airlabs-client"]


[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/airlabs-rs/airlabs-rs"


[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
codes-iso-639 = "0.1"
itertools = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.41", features = ["full"] }


airlabs-api = { path = "./airlabs-api" }
airlabs-client = { path = "./airlabs-client" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
large_futures = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
# non_exhaustive_omitted_patterns = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
warnings = "deny"
