[package]
name = "airlabs-api"
description = "airlabs.co API data types"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true


[dependencies]
serde.workspace = true
thiserror.workspace = true
time.workspace = true


[dev-dependencies]
serde_json.workspace = true
codes-iso-639.workspace = true


[lints]
workspace = true
