[package]
name = "airlabs-client"
description = "airlabs.co API client library"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true


[dependencies]
airlabs-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true


[lints]
workspace = true
