[package]
name = "airlabs"
version.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

airlabs-api.workspace = true
airlabs-client.workspace = true


[lints]
workspace = true
