[package]
name = "airlabs"
description = "airlabs CLI utility"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

airlabs-api.workspace = true
airlabs-client.workspace = true


[lints]
workspace = true
